# file_linker

./: .gitignore  __main__.py  pyproject.toml
app/database/: base.py  crud.py  models.py
app/scheduler/: main.py
static/css/: base.css
static/css/components/: header.css
static/css/pages/: history.css  home.css  result.css
static/scripts/pages/: history.js  home.js  result.js
templates/: base.html
templates/components/: header.html
templates/pages/: history.html  home.html  result.html
