[project]
name = "filelinker"
version = "0.1.0"
description = ""
authors = [
    {name = "aa08d"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
